--- a/src/test/resources/gatling.conf
+++ b/src/test/resources/gatling.conf
@@ -6,98 +6,117 @@
 
 gatling {
   core {
-    #encoding = "utf-8"                      # Encoding to use throughout Gatling for file and string manipulation
+    #outputDirectoryBaseName = "" # The directory where results are saved
+    #runDescription = ""          # The description of the run
+    #encoding = "utf-8"          # Encoding to use throughout Gatling for file and string manipulation
+    #simulationClass = ""        # The FQCN of the simulation to run
     #elFileBodiesCacheMaxCapacity = 200      # Cache size for request body EL templates, set to 0 to disable
-    #rawFileBodiesCacheMaxCapacity = 200     # Cache size for request body raw files, set to 0 to disable
-    #rawFileBodiesInMemoryMaxSize = 10240    # Max bite size of raw files to be cached in memory
+    #rawFileBodiesCacheMaxCapacity = 200     # Cache size for request body Raw templates, set to 0 to disable
+    #rawFileBodiesInMemoryMaxSize = 1000     # Below this limit, raw file bodies will be cached in memory
     #pebbleFileBodiesCacheMaxCapacity = 200  # Cache size for request body Pebble templates, set to 0 to disable
     #feederAdaptiveLoadModeThreshold = 100   # File size threshold (in MB). Below load eagerly in memory, above use batch mode with default buffer size
-    #shutdownTimeout = 10000                 # Milliseconds to wait for the engine to shutdown
+    #shutdownTimeout = 10000                 # Milliseconds to wait for the actor system to shutdown
     extract {
       regex {
-        #cacheMaxCapacity = 200              # Cache size for the compiled regexes, set to 0 to disable caching
+        #cacheMaxCapacity = 200 # Cache size for the compiled regexes, 2^8 = 256, set to 0 to disable caching
       }
       xpath {
-        #cacheMaxCapacity = 200              # Cache size for the compiled XPath queries,  set to 0 to disable caching
+        #cacheMaxCapacity = 200 # Cache size for the compiled XPath queries, 2^8 = 256, set to 0 to disable caching
       }
       jsonPath {
-        #cacheMaxCapacity = 200              # Cache size for the compiled jsonPath queries, set to 0 to disable caching
+        #cacheMaxCapacity = 200 # Cache size for the compiled jsonPath queries, 2^8 = 256, set to 0 to disable caching
       }
       css {
-        #cacheMaxCapacity = 200              # Cache size for the compiled CSS selectors queries,  set to 0 to disable caching
+        #cacheMaxCapacity = 200 # Cache size for the compiled CSS selectors queries, 2^8 = 256, set to 0 to disable caching
       }
     }
-  }
-  socket {
-    #connectTimeout = 10000                  # Timeout in millis for establishing a TCP socket
-    #tcpNoDelay = true
-    #soKeepAlive = false                     # if TCP keepalive configured at OS level should be used
-    #soReuseAddress = false
-  }
-  netty {
-    #useNativeTransport = true               # if Netty Linux native transport should be used instead of Java NIO
-    #useIoUring = false                      # if io_uring should be used instead of epoll if available
-    #allocator = "pooled"                    # force the ByteBufAllocator, possible values are pooled, unpooled and adaptive
-    #maxThreadLocalCharBufferSize = 200000   # Netty's default is 16k
-  }
-  ssl {
-    #useOpenSsl = true                       # if OpenSSL should be used instead of JSSE (only the latter can be debugged with -Djavax.net.debug=ssl)
-    #useOpenSslFinalizers = false            # if OpenSSL contexts should be freed with Finalizer or if using RefCounted is fine
-    #handshakeTimeout = 10000                # TLS handshake timeout in millis
-    #useInsecureTrustManager = true          # Use an insecure TrustManager that trusts all server certificates
-    #enabledProtocols = []                   # Array of enabled protocols for HTTPS, if empty use Netty's defaults
-    #enabledCipherSuites = []                # Array of enabled cipher suites for HTTPS, if empty enable all available ciphers
-    #sessionCacheSize = 0                    # SSLSession cache size, set to 0 to use JDK's default
-    #sessionTimeout = 0                      # SSLSession timeout in seconds, set to 0 to use JDK's default (24h)
-    #enableSni = true                        # When set to true, enable Server Name indication (SNI)
-    keyStore {
-      #type = ""                             # Type of SSLContext's KeyManagers store, possible values are jks and p12
-      #file = ""                             # Location of SSLContext's KeyManagers store
-      #password = ""                         # Password for SSLContext's KeyManagers store
-      #algorithm = ""                        # Algorithm used SSLContext's KeyManagers store, typically RSA
-    }
-    trustStore {
-      #type = ""                             # Type of SSLContext's TrustManagers store, possible values are jks and p12
-      #file = ""                             # Location of SSLContext's TrustManagers store
-      #password = ""                         # Password for SSLContext's TrustManagers store
-      #algorithm = ""                        # Algorithm used by SSLContext's TrustManagers store, typically RSA
+    directory {
+      #simulations = user-files/simulations # Directory where simulation classes are located
+      #resources = user-files/resources     # Directory where resources, such as feeder files and request bodies are located
+      #results = results                    # Name of the directory where all results folder are located
+      #binaries = ""                        # If set, name of the directory where compiles classes are located
+      #resultsImports = ""                  # Directory where to store results imports
     }
   }
   charting {
-    #maxPlotPerSeries = 1000                 # Number of points per chart in Gatling reports
-    #useGroupDurationMetric = false          # Switch group timings from cumulated response time to group duration.
+    #noReports = false       # When set to true, don't generate HTML reports
+    #maxPlotPerSeries = 1000 # Number of points per graph in Gatling reports
+    #useGroupDurationMetric = false  # Switch group timings from cumulated response time to group duration.
     indicators {
-      #lowerBound = 800                      # Lower bound for the requests' response time to track in the reports and the console summary
-      #higherBound = 1200                    # Higher bound for the requests' response time to track in the reports and the console summary
-      #percentile1 = 50                      # Value for the 1st percentile to track in the reports and the console summary
-      #percentile2 = 75                      # Value for the 2nd percentile to track in the reports and the console summary
-      #percentile3 = 95                      # Value for the 3rd percentile to track in the reports and the console summary
-      #percentile4 = 99                      # Value for the 4th percentile to track in the reports and the console summary
+      #lowerBound = 800      # Lower bound for the requests' response time to track in the reports and the console summary
+      #higherBound = 1200    # Higher bound for the requests' response time to track in the reports and the console summary
+      #percentile1 = 50      # Value for the first percentile to track in the reports, the console summary and GraphiteDataWriter
+      #percentile2 = 75      # Value for the second percentile to track in the reports, the console summary and GraphiteDataWriter
+      #percentile3 = 95      # Value for the third percentile to track in the reports, the console summary and GraphiteDataWriter
+      #percentile4 = 99      # Value for the fourth percentile to track in the reports, the console summary and GraphiteDataWriter
     }
   }
   http {
-    #fetchedCssCacheMaxCapacity = 200        # Cache size for CSS parsed content, set to 0 to disable
-    #fetchedHtmlCacheMaxCapacity = 200       # Cache size for HTML parsed content, set to 0 to disable
-    #perUserCacheMaxCapacity = 200           # Per virtual user cache size, set to 0 to disable
-    #warmUpUrl = "https://gatling.io"        # The URL to use to warm-up the HTTP stack (blank means disabled)
-    #pooledConnectionIdleTimeout = 60000     # Timeout in millis for a connection to stay idle in the pool
-    #requestTimeout = 60000                  # Timeout in millis for performing an HTTP request
-    #enableHostnameVerification = false      # When set to true, enable hostname verification: SSLEngine#setEndpointIdentificationAlgorithm("HTTPS")
-    dns {
-      #queryTimeout = 5000                   # Timeout in millis of each DNS query in millis
-      #maxQueriesPerResolve = 6              # Maximum allowed number of DNS queries for a given name resolution
+    #fetchedCsv {
+    #  #perUserCacheMaxCapacity = 200          # Per virtual user cache size for the parsed CSV files, set to 0 to disable
+    #  #sharedCacheMaxCapacity = 200           # Shared cache size for the parsed CSV files, set to 0 to disable
+    #}
+    #fetchedFile {
+    #  #perUserCacheMaxCapacity = 200          # Per virtual user cache size for the fetched files, set to 0 to disable
+    #  #sharedCacheMaxCapacity = 200           # Shared cache size for the fetched files, set to 0 to disable
+    #}
+    #perUserCacheMaxCapacity = 200             # Per virtual user HTTP cache size, set to 0 to disable
+    #sharedCacheMaxCapacity = 200              # Shared HTTP cache size, set to 0 to disable
+    #dns {
+    #  #queryTimeout = 5000                    # DNS query timeout in millis
+    #  #maxQueriesPerResolve = 6               # Maximum number of DNS queries per name resolve
+    #}
+    #ssl {
+    #  #keyStore {
+    #    #type = ""                            # Type of SSLContext's KeyManagers store
+    #    #file = ""                            # Location of SSLContext's KeyManagers store
+    #    #password = ""                        # Password for SSLContext's KeyManagers store
+    #    #algorithm = ""                       # Algorithm used SSLContext's KeyManagers store
+    #  }
+    #  #trustStore {
+    #    #type = ""                            # Type of SSLContext's TrustManagers store
+    #    #file = ""                            # Location of SSLContext's TrustManagers store
+    #    #password = ""                        # Password for SSLContext's TrustManagers store
+    #    #algorithm = ""                       # Algorithm used by SSLContext's TrustManagers store
+    #  }
+    #  #useDefaultProperties = true            # When set to true, don't override in code the SSL system properties
+    #  #enableSni = true                       # When set to true, enable Server Name indication (SNI). When set to false or not set, SNI is only enabled when the request contains an absolute URI
+    #  #sessionCacheSize = 0                   # SSLSession cache size, set to 0 to use JDK's default
+    #  #sessionTimeout = 0                     # SSLSession timeout in seconds, set to 0 to use JDK's default (24h)
+    #  #enableSni = true                       # When set to true, enable Server Name indication (SNI). When set to false or not set, SNI is only enabled when the request contains an absolute URI
+    #  #handshakeTimeout = 10000               # TLS handshake timeout in millis
+    #}
+    #firstRequest {
+    #  #timeout = 60000                        # Timeout in millis for the first request of the scenario
+    #}
+    #enableGA = true                           # Very light Google Analytics, please support
+    sse {
+      #maxBufferSize = 100000                  # Maximum buffer size for Server-Sent Events
     }
   }
   jms {
-    #replyTimeoutScanPeriod = 1000           # scan period for timed out reply messages
+    #replyTimeoutScanPeriod = 1000             # scan period for timedout reply messages
   }
   data {
-    #writers = [console, file]               # The list of DataWriters to which Gatling write simulation data (currently supported : console, file)
-    #utcDateTime = true                      # Print date-times with the UTC zone instead of the System's default
+    #writers = [console, file]                 # The list of DataWriters to which Gatling write simulation data (currently supported : console, file, graphite)
     console {
-      #light = false                         # When set to true, displays a light version without detailed request stats
-      #writePeriod = 5                       # Write interval, in seconds
+      #light = false                           # When set to true, displays a light version without detailed request stats
+      #writePeriod = 5                         # Write interval, in seconds
     }
-    #enableAnalytics = true                  # Anonymous Usage Analytics (no tracking), please support
+    file {
+      #bufferSize = 8192                       # FileDataWriter's internal data buffer size, in bytes
+    }
+    leak {
+      #noActivityTimeout = 30  # Period, in seconds, for which Gatling may have no activity before considering a leak may be happening
+    }
+    graphite {
+      #light = false              # only send the all* stats
+      #host = "localhost"         # The host where the Carbon server is located
+      #port = 2003                # The port to which the Carbon server listens to (2003 is default for plaintext, 2004 is default for pickle)
+      #protocol = "tcp"           # The protocol used to send data to Carbon (currently supported : "tcp", "udp")
+      #rootPathPrefix = "gatling" # The common prefix of all metrics sent to Graphite
+      #bufferSize = 8192          # Internal data buffer size, in bytes
+      #writePeriod = 1            # Write period, in seconds
+    }
   }
 }
